<resources>
    <string name="app_name">ChatProject</string>
    <string name="display_name">Display name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Log out</string>
    <string name="all_users">All users</string>
    <string name="account_settings">Account settings</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="submit">Submit</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">LOGIN</string>
    <string name="create_a_account">Create a Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="default_status">Hi, there.I\'m using project chat app.</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="message_hint">Message...</string>
    <string name="no_chats_for_now">No chats for now</string>
    <string name="no_friends_for_now">No friends for now</string>
    <string name="no_requests_for_now">No requests for now</string>
    <string name="contentdescription">contentDescription</string>
    <string name="example_of_description_slide">This is example of description text below the headline text in my android chat app</string>
    <string name="example_headline_slide">Headline Text</string>
</resources>
