<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/slide_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/contentdescription"
        app:srcCompat="@drawable/circle_slide_1" />

    <TextView
        android:id="@+id/slide_head_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slide_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/contentdescription"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/example_headline_slide" />

    <TextView
        android:id="@+id/slide_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slide_head_text"
        android:layout_marginTop="30dp"
        android:textSize="17sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:contentDescription="@string/contentdescription"
        android:textColor="@color/TransparentWhite"
        android:text="@string/example_of_description_slide" />
</RelativeLayout>