<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.korisnik.chatproject.SettingsActivity">

    <FrameLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/circle_image_display_settings" />

        <ProgressBar
            android:id="@+id/loading_indicator"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"/>
    </FrameLayout>

    <TextView
        android:id="@+id/textNameSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:text="Display Name" />

    <TextView
        android:id="@+id/textStatusSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNameSettings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="@color/white_almost"
        android:textSize="18sp"
        android:text="@string/default_status" />

    <Button
        android:id="@+id/changeImageSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:textSize="16sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:backgroundTint="@android:color/white"
        android:text="@string/change_image" />

    <Button
        android:id="@+id/changeStatusSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@id/changeImageSettings"
        android:layout_alignRight="@id/changeImageSettings"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/change_status"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorAccent"
        android:textSize="16sp" />


</RelativeLayout>
